@@ -2,6 +2,7 @@
 	- add --eval to find result of macro expansion.
 	- add configure scaffolding to support rpm-4.0 packages.
 	- include shared libs in rpm-devel (no versioning yet).
+	- add epoch (as [0-9]*:version-release) to install dependency parse.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
